# genesis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.cursor/rules/: docs-maintenance.mdc
.github/workflows/: build-windows-exe.yml  run-tests.yml
src/genesis/: __init__.py
src/genesis/app/: main.py  main_window.py  test_main_window_plot_resolution.py  user_dirs.py
src/genesis/core/instrument/: base_instrument.py  config_field.py  discovery.py  registry.py
src/genesis/core/job/: abort_controller.py  model.py  runner.py  safe_state_manager.py
src/genesis/core/runtime/: __init__.py  acquisition_worker.py  expression_eval.py  setpoint_safety.py  test_expression_eval.py
src/genesis/core/transport/: base_transport.py  dummy_test_transport.py  transport_factory.py  visa_transport.py
src/genesis/export/: base_exporter.py  csv_exporter.py  manager.py
src/genesis/instruments/: DRIVER_AUTHORING_GUIDE.md
src/genesis/instruments/ami420/: __init__.py  driver.py
src/genesis/instruments/b29xx/: __init__.py  driver.py
src/genesis/instruments/sr850/: __init__.py  driver.py
src/genesis/ui/: __init__.py  no_wheel_combo_box.py  theme.py
src/genesis/ui/job_builder/: instrument_config_form.py  instrument_instance_editor.py  job_builder_widget.py  plot_definition_editor.py  sweep_definition_editor.py
src/genesis/ui/plotting/: heatmap_plot_widget.py  live_plot_widget.py  xy_plot_widget.py
tests/: test_ami420_driver.py  test_setpoint_safety.py  test_slew_integration.py  test_visa_transport.py
